--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "nodemon src/bin/index.js"
   },
   "dependencies": {
+    "@sentry/browser": "^9.40.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
